--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -1,3 +1,4 @@
+  
 <%= form_for(@event) do |f| %>
   <% if @event.errors.any? %>
     <div id="error_explanation">
@@ -15,19 +16,24 @@
     <%= f.label :name %><br />
     <%= f.text_field :name %>
   </div>
+
+  <div class="field">
+    <%= f.fields_for(@place) do |builder| %>
+      <%= render "placefields", :f => builder %>
+    <% end %>
+  </div>
+
   <div class="field">
     <%= f.label :date %><br />
     <%= f.date_select :date %>
   </div>
-  <div class="field">
-    <%= f.label :user_id %><br />
-    <%= f.number_field :user_id %>
-  </div>
-  <div class="field">
-    <%= f.label :url %><br />
-    <%= f.text_field :url %>
-  </div>
+
+  <!-- <div class="field"> -->
+    <%#= f.label :url %><br />
+    <%#= f.text_field :url %>
+  <!-- </div> -->
   <div class="actions">
     <%= f.submit %>
   </div>
 <% end %>
+
